--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,8 +15,10 @@
         
     
     .title{
+        
         text-align: center;
     h1{
+        color: black;
         font-size: 3rem;
         }//end H1
     }//end title
