--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,15 +11,30 @@
     padding: 20px 40px;
     display: flex;
     justify-content: center;
+
+
     
       @media @phone{
-        flex-direction: column-reverse;
+        flex-direction: column;
         padding: 3% 3%;
+        
+      
       }
+  
 
    }
      
+   @media @phone{
+    #middle{
+      display: flex;
+      flex-direction: column-reverse;
+    }
 
+  }
+
+  #bottom{
+    border-bottom: 1px solid @main-border-color;
+  }
 
     .info-text {
       width: 50%;
@@ -38,8 +53,7 @@
  
     
 
-      // .btn {
-      // }
+     
     }
     .btn{
     .button(orangered; white; 200px);
@@ -60,6 +74,7 @@
       @media @phone{
         width: 100%;
         margin-left: 0%;
+        //display: none;
         
       }
       
@@ -71,7 +86,5 @@
     }
 
 
-  }
-
   
-//}// home
+}// home
