--- a/css/index.css
+++ b/css/index.css
@@ -156,6 +156,9 @@ h2 {
 h3 {
   font-size: 2.8rem;
 }
+h4 {
+  font-size: 2.2rem;
+}
 p {
   font-size: 1.6rem;
   line-height: 1.4;
@@ -215,7 +218,7 @@ footer {
   align-items: center;
 }
 .home .info {
-  margin-top: 60px;
+  margin-top: 30px;
   border-top: 1px solid #dee2e6;
   padding: 20px 40px;
   display: flex;
@@ -273,6 +276,9 @@ footer {
     align: center;
   }
 }
+.home .btn a {
+  color: white;
+}
 .home .info-img {
   width: 46%;
   margin-left: 4%;
@@ -288,4 +294,64 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+.about .info {
+  margin-top: 30px;
+  border-top: 1px solid #dee2e6;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 500px) {
+  .about .info {
+    flex-direction: column;
+    padding: 3% 3%;
+  }
+}
+@media (max-width: 500px) {
+  .about #middle {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+}
+.about #bottom {
+  border-bottom: 1px solid #dee2e6;
+}
+.about .info-text {
+  width: 50%;
+}
+@media (max-width: 500px) {
+  .about .info-text {
+    width: 90%;
+    padding-top: 1%;
+  }
+}
+.about .info-text h3 {
+  margin-bottom: 10px;
+}
+.about .info-text p {
+  margin-bottom: 26px;
+}
+.about .info-img {
+  width: 46%;
+  margin-left: 4%;
+  padding-right: 8%;
+}
+@media (max-width: 500px) {
+  .about .info-img {
+    width: 100%;
+    margin-left: 0%;
+  }
+}
+.about .info-img img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.about .connect {
+  margin-top: 5%;
+}
+.about .connect i {
+  font-size: 5rem;
+  color: orangered;
 }
