--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@
 
 
   .info{
-    margin-top: 60px;
+    margin-top: 30px;
     border-top: 1px solid @main-border-color;
     padding: 20px 40px;
     display: flex;
@@ -62,7 +62,9 @@
           align: center;
           
         }
-        
+        a{
+          color: white;
+        }
       }//end button
 
 
