--- a/less/home-page.less
+++ b/less/home-page.less
@@ -56,6 +56,8 @@
      
     }
     .btn{
+      width: 200px;
+      
     .button(orangered; white; 200px);
         @media @phone{
           width: 95%;
