--- a/less/about.less
+++ b/less/about.less
@@ -42,6 +42,7 @@
           @media @phone{
             width: 90%;
             padding-top: 1%;
+            margin-left: 3%;
           }
   
         h3 {
@@ -55,27 +56,26 @@
       
   
        
-      }
+      }//end info
   
   
       .info-img {
         width: 46%;
-        margin-left: 4%;
+        margin-left: 3%;
         padding-right: 8%;
         
         @media @phone{
           width: 100%;
-          margin-left: 0%;
-          //display: none;
+
           
-        }
+        }//end media
         
         img {
           width: 100%;
           height: auto;
           border-radius: 10px;
-        }
-      }
+        }//end img
+      }//end info-img
     .connect{  
         margin-top: 5%;
 
@@ -83,8 +83,8 @@
           font-size: 5rem;
           color: orangered;
 
-      }
-    }
+      }//end i
+    }//emd connect
   }// home
 
 
