--- a/less/home-page.less
+++ b/less/home-page.less
@@ -41,6 +41,7 @@
         @media @phone{
           width: 90%;
           padding-top: 1%;
+          margin-left: 3%;
         }
 
       h3 {
@@ -64,9 +65,7 @@
           align: center;
           
         }
-        a{
-          color: white;
-        }
+    
       }//end button
 
 
@@ -77,17 +76,17 @@
       
       @media @phone{
         width: 100%;
-        margin-left: 0%;
-        //display: none;
+        margin-left: 3%;
+       
         
-      }
+      }//end media
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
       }
-    }
+    }//end info-img
 
 
   
