--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,12 +10,14 @@
     height: 40px;
     font-size: 2rem;
     border-radius: 10px;
+    border-color: darkorange;
+    border: 1px solid darkorange;
     text-align: center;
-    padding-top: 10px;
-    transition: 0.7s;
+    
+    transition: 0.3s;
 
-        &:hover{
-        background-color: #ff6500;
+        &:hover{        
+        border: 2px solid @border-real;
     }
 
     
