--- a/less/navigation.less
+++ b/less/navigation.less
@@ -29,6 +29,12 @@
         padding-top: 2%;
         margin-left: 25%;
         margin-right: 25%;
+        @media @tablet{
+            margin-left: 18%;
+            margin-right: 18%;
+        }
+        
+        
         @media @phone{
             margin-left: 10%;
             margin-right: 10%;
@@ -43,7 +49,7 @@
             color: @ebony-clay;
         
         }
-    }
+    }//end nav
 
     
 
