--- a/less/variables.less
+++ b/less/variables.less
@@ -3,7 +3,6 @@
 // // Color pointers
 
 
-// @header-font-color: @ebony-clay;
 @main-font-color: @shuttle-gray;
 @main-border-color: @border-real;
 
@@ -13,5 +12,10 @@
 @ebony-clay: #23293B;
 @shuttle-gray: #5E6164;
 @border-real: #dee2e6;
+
+
+//break points
+@phone: ~"(max-width: 500px)";
+@tablet: ~"(max-width: 800px)";
 
 
